fix header z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,3 +41,6 @@
   background-color: #fff;
   opacity: 100%;
 }
+.z-max {
+  z-index: 1000;
+}
